# anima

./: .eslintrc.cjs  .gitignore  20260227-120000-bootstrap-foundation.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  SOUL.md  VISION.md  components.json  conftest.py  electron.vite.config.ts  index.html  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  seed.py  tailwind.config.js  test_claude.sh  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo  vitest.config.ts  wiring.py
.anima/: config.json  config.yaml  current_prompt.txt  inbox.json  milestones.json  soul.md  state.json  state.yaml
.anima/milestones/: M1-ui-foundation.md  M2-project-setup.md  M3-inbox-and-planning.md  M4-iteration-loop.md  M5-human-acceptance.md  M8-mention-dispatch-refactor.md  m1.json  m2.json  m3.json  m4.json  m5.json  m6.json  m7.json
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
adapters/: __init__.py  executor_bridge.py  gap_analyzer_bridge.py  git_vc.py  local_fs.py  planner_bridge.py  pytest_runner.py  quality_checker.py  reporter_bridge.py  scanner_bridge.py  seed_bridge.py  verifier_bridge.py
adapters/agents/: claude_code.py  codex.py  gemini.py
adapters/tests/: test_git_vc.py  test_local_fs.py  test_seed_bridge.py
benchmarks/: cli_app.py  harness.py  rest_api.py  self_improvement.py
benchmarks/specs/: cli_app.md  rest_api.md
benchmarks/tests/: test_cli_app.py  test_rest_api.py  test_self_improvement.py
docs/: architecture.md  index.md  modules.md  storage.md
domain/: __init__.py  models.py  ports.py
electron/main/: git.ts  icons.ts  index.ts  ipc.ts  logger.ts  milestones.ts  scheduler.ts  schedulerManager.ts  setup.ts  state.ts  store.ts  tray.ts  types.ts
electron/preload/: index.ts
examples/todos/: package-lock.json  package.json
inbox/: 20260228-143420-review-all-roadmap-implements-find-the.md
iterations/: 0001-20260227-105759.json  0001-conformance.json  0003-20260227-111659.json  0003-20260228-012709.json  0004-20260228-013618.json  0005-20260227-113306.json  0005-20260228-013858.json  0006-20260227-113856.json  0006-20260228-014229.json  0007-20260227-120221.json  0007-20260228-014806.json  0008-20260227-123536.json  0008-20260228-015218.json  0009-20260227-124236.json  0009-20260228-020606.json  0010-20260227-125229.json  0010-20260228-021023.json  0011-20260227-125533.json  0011-20260228-021458.json  0012-20260227-125845.json  0012-20260228-021812.json  0013-20260227-130515.json  0013-20260228-022255.json  0014-20260227-130813.json  0014-20260228-025144.json  0015-20260228-030833.json  0016-20260228-031602.json  0017-20260228-032255.json  0018-20260228-033315.json  0019-20260228-033858.json  0020-20260228-033938.json  0021-20260228-034011.json  0022-20260228-060135.json  0023-20260228-064050.json  0024-20260228-070046.json  0025-20260228-070448.json  0029-20260228-072150.json  0030-20260228-072828.json  0031-20260228-073426.json  0032-20260228-074533.json  (+7 more)
kernel/: cli.py  config.py  git_ops.py  loop.py  roadmap.py  seed.py  state.py
kernel/console/: __init__.py  _plain.py  _protocol.py  _rich.py
kernel/tests/: test_git_ops.py  test_loop.py  test_roadmap.py  test_seed.py  test_state.py
milestones/: M1-ui-foundation.md  M2-inbox-and-planning.md  M2-milestone-creation.md  M3-iteration-loop.md  M4-iteration-loop.md  M5-git-integration.md  M5-human-acceptance.md  M6-git-integration.md  M6-github-issues.md  v0.1.md
modules/: __init__.py
modules/docgen/: CONTRACT.md  SPEC.md  core.py
modules/executor/: CONTRACT.md  SPEC.md  core.py
modules/failure_analyzer/: CONTRACT.md  SPEC.md  core.py
modules/gap_analyzer/: CONTRACT.md  SPEC.md  core.py
modules/gate/: CONTRACT.md  SPEC.md  core.py
modules/init_detector/: CONTRACT.md  SPEC.md  core.py
modules/module_health/: CONTRACT.md  SPEC.md  core.py
modules/planner/: CONTRACT.md  SPEC.md  core.py
modules/reporter/: CONTRACT.md  SPEC.md  core.py
modules/scanner/: CONTRACT.md  SPEC.md  core.py
modules/toolchain_writer/: CONTRACT.md  SPEC.md  core.py
modules/verifier/: CONTRACT.md  SPEC.md  core.py
modules/vision_templates/: CONTRACT.md  SPEC.md  core.py
roadmap/: v0.1.md  v0.2.md  v0.3.md  v0.4.md  v0.5.md  v0.6.md  v0.7.md  v0.8.md  v1.0.md  v1.1.md
src/: App.tsx  browserStub.ts  index.css  main.tsx  mockElectronAPI.ts
tests/: conftest.py  test_agent.py  test_agent_backends.py  test_domain.py  test_git_ops.py  test_models.py  test_quota_detection.py  test_scheduler.py  test_state.py  test_tui_cmds.py  test_wiring.py
(+243 files in other folders)
