[project]
name = "anima"
version = "0.1.0"
description = "Autonomous Iteration Engine — gives software projects a life of their own"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = []

[project.scripts]
anima = "kernel.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kernel"]

# ── ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 99
src = ["."]
exclude = ["kernel/"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["anima"]

# ── pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests", "modules"]
addopts = "--tb=short -q"
