[project]
name = "anima-engine"
version = "1.0.0"
description = "Autonomous Iteration Engine — gives software projects a life of their own"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = ["rich>=13.0"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/nichochar/anima"

[project.scripts]
anima = "kernel.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kernel", "domain", "modules", "adapters", "benchmarks"]

[tool.hatch.build.targets.wheel.force-include]
"wiring.py" = "wiring.py"

# ── ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 99
src = ["."]
exclude = ["kernel/"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["anima"]

# ── pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests", "modules", "benchmarks"]
addopts = "--tb=short -q"
markers = ["integration: end-to-end integration tests against real project"]

# ── coverage ───────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["domain", "modules", "benchmarks"]
